cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_21325_elbAndInstance.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"test template for cnfassist - creates an ELB and an Instance",
  "Parameters":{
    "env":{
      "Type":"String"
    },
    "vpc":{
      "Type":"String"
    },
    "zoneA":{
      "Type":"String",
      "Default":"eu-west-1a",
      "Description":"zoneADescription"
    }
  },
  "Resources":{

    "vpcSubnet":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "AvailabilityZone":{
          "Ref":"zoneA"
        },
        "CidrBlock":"10.0.10.13/24",
        "VpcId":{
          "Ref":"vpc"
        }
      }
    },
    "sgLoadBalance": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                    "GroupDescription": "Load Balancer Security Group",
                    "VpcId" : { "Ref" : "vpc" },
                    "SecurityGroupIngress": [
                      { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "10.0.0.0/16" }
                    ],
                    "SecurityGroupEgress": [
                        { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "10.0.0.0/16" }
                    ]
          }
        },
    "loadBalancer":{
      "Type":"AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties":{
        "HealthCheck":{
          "HealthyThreshold":"2",
          "Interval":"15",
          "Target":"HTTP:8080/api/status",
          "Timeout":"5",
          "UnhealthyThreshold":"2"
        },
        "Subnets":[
          {
            "Ref":"vpcSubnet"
          }
        ],
        "Listeners":[
          {
            "InstancePort":"8082",
            "LoadBalancerPort":"80",
            "Protocol":"HTTP",
            "PolicyNames":[

            ]

          }
        ],
        "SecurityGroups" : [ { "Ref" : "sgLoadBalance" } ]
      }
    },
    "simpleInstance":{
    "Type":"AWS::EC2::Instance",
      "Properties":{
        "InstanceType":"t2.micro",
        "ImageId":"ami-0f3164307ee5d695a",
        "SubnetId":{
          "Ref":"vpcSubnet"
        },
        "Tags": [
                  { "Key" : "Name", "Value": "aTestInstance" },
                  { "Key" : "CFN_ASSIST_TYPE", "Value": "web" }
                ]
      }
    }
  }
}
